[package]
name = "singlethread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }

[[bin]]
name = "singlethread"
path = "singlethread.rs"
